# rpi-ais

./: CHANGELOG.md  CMakeLists.txt  README.md  ais_forwarder.conf  ais_forwarder.service  rpi-ais.py  rpi-ais.service
src/: ais_forwarder.cpp  test.cpp
